@@ -6,7 +6,7 @@ gmt2kml \- Convert GMT data tables to KML files for Google Earth
 BD(gmt2kml) [ IT(table) ] [ OPT(A)BD(a)|BD(g)|BD(s)[IT(alt)|BD(x)IT(scale)] ]
 [ OPT(C)IT(cpt) ]
 [ OPT(D)IT(descriptfile) ] [ OPT(E)[IT(altitude)] ] [ OPT(F)BD(e)|BD(s)|BD(t)|BD(l)|BD(p) ] 
-[ OPT(G)BD(f|n)IT(fill) ] [ OPT(I)IT(icon) ] [ GMT_K_OPT]
+[ OPT(G)BD(f|n)BD(-)|IT(fill) ] [ OPT(I)IT(icon) ] [ GMT_K_OPT]
 [ OPT(L)IT(col1:name1),IT(col2:name2),... ] 
 [ OPT(N)[+|IT(name_template)|IT(name)] ] [ GMT_O_OPT] [ OPT(Ra)|IT(w/e/s/n) ] 
 [ OPT(S)BD(c)|BD(n)IT(scale)] ] [ OPT(T)IT(title)[/IT(foldername)] ] [ GMT_V_OPT ] 
