@@ -1,11 +1,11 @@
 %!PS-Adobe-3.0
 %%BoundingBox: 0 0 612 792
 %%HiResBoundingBox: 0 0 612 792
-%%Title: GMT v5.0.0a (CVS Jun 30 2011 11:51:12) [C4] Document from GMT_psxy
+%%Title: GMT v5.0.0b (CVS Jul 18 2011 09:58:59) [64-bit] Document from GMT_psxy
 %%Creator: GMT
-%%For: unknown
+%%For: pwessel
 %%DocumentNeededResources: font Helvetica
-%%CreationDate: Sun Jul 03 19:53:53 2011
+%%CreationDate: Mon Jul 18 15:44:17 2011
 %%LanguageLevel: 2
 %%DocumentData: Clean7Bit
 %%Orientation: Portrait
@@ -145,7 +145,7 @@
 /oacute		/ae		/ocircumflex	/odieresis	/ograve		/dotlessi	/uacute		/ucircumflex
 /udieresis	/oslash		/oe		/germandbls	/ugrave		/Aring		/aring		/ydieresis
 ] def
-/PSL_font_encode 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 39 array astore def
+/PSL_font_encode 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 40 array astore def
 /F0 {/Helvetica Y}!
 /F1 {/Helvetica-Bold Y}!
 /F2 {/Helvetica-Oblique Y}!
@@ -185,6 +185,7 @@
 /F36 {/Ryumin-Light-EUC-V Y}!
 /F37 {/GothicBBB-Medium-EUC-H Y}!
 /F38 {/GothicBBB-Medium-EUC-V Y}!
+/F39 {/LinBiolinumO Y}!
 /PSL_pathtextdict 26 dict def
 /PSL_pathtext
   {PSL_pathtextdict begin
@@ -571,7 +572,7 @@ O0
 1200 6000 TM
 
 % PostScript produced by:
-%%GMT:  c:\progs_cygw\GMTdev\GMT5\WIN64\bin\psxy.exe t.txt -R-5/5/-5/5 -JX3i -P -W1p -Gorange -B2g1WSne -Y5i -K
+%%GMT:  psxy t.txt -R-5/5/-5/5 -JX3i -P -W1p -Gorange -B2g1WSne -Y5i -K
 %%PROJ: xy -5.00000000 5.00000000 -5.00000000 5.00000000 -5.000 5.000 -5.000 5.000 +xy +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
@@ -820,7 +821,7 @@ O0
 4200 0 TM
 
 % PostScript produced by:
-%%GMT:  c:\progs_cygw\GMTdev\GMT5\WIN64\bin\psxy.exe pieceaa pieceab pieceac piecead pieceae pieceaf pieceag -R-5/5/-5/5 -JX3i -O -W1p -B2g1WSne -X3.5i -K
+%%GMT:  psxy pieceaa pieceab pieceac piecead pieceae pieceaf pieceag -R-5/5/-5/5 -JX3i -O -W1p -B2g1WSne -X3.5i -K
 %%PROJ: xy -5.00000000 5.00000000 -5.00000000 5.00000000 -5.000 5.000 -5.000 5.000 +xy +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
@@ -836,9 +837,9 @@ O0
 -23 63 D
 16 107 D
 31 149 D
-22 177 D
 S
-2430 2891 M
+2437 2710 M
+-7 181 D
 -49 155 D
 -90 102 D
 -121 31 D
@@ -848,10 +849,10 @@ S
 -81 -156 D
 -59 -132 D
 -50 -85 D
--58 -25 D
--84 30 D
 S
-1350 2579 M
+1552 2482 M
+-84 30 D
+-118 67 D
 -151 80 D
 -172 63 D
 -171 22 D
@@ -860,11 +861,11 @@ S
 -27 -129 D
 39 -152 D
 92 -153 D
-121 -136 D
+S
+847 2055 M
 117 -108 D
 85 -81 D
-S
-1080 1800 M
+31 -66 D
 -31 -66 D
 -85 -81 D
 -117 -108 D
@@ -872,35 +873,37 @@ S
 -92 -153 D
 -39 -152 D
 27 -129 D
-92 -87 D
+S
+714 888 M
 142 -32 D
 171 22 D
 172 63 D
-S
-1350 1021 M
+151 80 D
 118 67 D
 84 30 D
 58 -25 D
 50 -85 D
 59 -132 D
 81 -156 D
-107 -147 D
+S
+1907 573 M
 128 -108 D
 135 -44 D
 121 31 D
 90 102 D
-S
-2430 709 M
+49 155 D
 7 181 D
 -22 177 D
 -31 149 D
 -16 107 D
 23 63 D
-74 30 D
+S
+2465 1416 M
 291 36 D
 177 44 D
 158 76 D
 110 105 D
+39 123 D
 S
 4 W
 0 0 M
@@ -1068,7 +1071,7 @@ O0
 -4200 -4200 TM
 
 % PostScript produced by:
-%%GMT:  c:\progs_cygw\GMTdev\GMT5\WIN64\bin\psxy.exe -R-5/5/-5/5 -JX3i -O -W1p -Gorange -B2g1WSne -X-3.5i -Y-3.5i -K
+%%GMT:  psxy -R-5/5/-5/5 -JX3i -O -W1p -Gorange -B2g1WSne -X-3.5i -Y-3.5i -K
 %%PROJ: xy -5.00000000 5.00000000 -5.00000000 5.00000000 -5.000 5.000 -5.000 5.000 +xy +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
@@ -1077,10 +1080,18 @@ O0
 {1 0.647 0 C} FS
 O1
 /FO {P}!
-/FO {fs os}!
-FO
-/FO {P}!
-2430 2891 M
+3240 1800 M
+-39 123 D
+-110 105 D
+-158 76 D
+-177 44 D
+-291 36 D
+-74 30 D
+-23 63 D
+16 107 D
+31 149 D
+22 177 D
+-7 181 D
 -49 155 D
 -90 102 D
 -121 31 D
@@ -1140,17 +1151,6 @@ FO
 158 76 D
 110 105 D
 39 123 D
--39 123 D
--110 105 D
--158 76 D
--177 44 D
--291 36 D
--74 30 D
--23 63 D
-16 107 D
-31 149 D
-22 177 D
--7 181 D
 FO
 /FO {fs os}!
 FO
@@ -1320,7 +1320,7 @@ O0
 4200 0 TM
 
 % PostScript produced by:
-%%GMT:  c:\progs_cygw\GMTdev\GMT5\WIN64\bin\psxy.exe -R-5/5/-5/5 -JM3i -O -W1p -Gred -B2g1WSne -X3.5i -K
+%%GMT:  psxy -R-5/5/-5/5 -JM3i -O -W1p -Gred -B2g1WSne -X3.5i -K
 %%PROJ: merc -5.00000000 5.00000000 -5.00000000 5.00000000 -556597.454 556597.454 -553583.847 553583.847 +proj=merc +lon_0=0 +k=-1 +x_0=0 +y_0=0 +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
@@ -1328,9 +1328,6 @@ O0
 17 W
 {1 0 0 C} FS
 O1
-/FO {P}!
-/FO {fs os}!
-FO
 /FO {P}!
 3240 1790 M
 -39 122 D
@@ -1580,7 +1577,7 @@ O0
 0 0 TM
 
 % PostScript produced by:
-%%GMT:  c:\progs_cygw\GMTdev\GMT5\WIN64\bin\psxy.exe -R-5/5/-5/5 -JM3i -O -T
+%%GMT:  psxy -R-5/5/-5/5 -JM3i -O -T
 %%PROJ: merc -5.00000000 5.00000000 -5.00000000 5.00000000 -556597.454 556597.454 -553583.847 553583.847 +proj=merc +lon_0=0 +k=-1 +x_0=0 +y_0=0 +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
