@@ -1,5 +1,5 @@
 #!/bin/bash
-#	$Id: stitch.sh,v 1.5 2011-07-03 18:55:45 jluis Exp $
+#	$Id: stitch.sh,v 1.6 2011-07-19 01:50:05 guru Exp $
 #
 # Basic stitching of Cartesian and geographic data
 
@@ -10,10 +10,10 @@ ps=stitch.ps
 
 # Make a polygon file
 gmtmath -T0/360/5 T -C0 COSD -C1 SIND -Ca T 5 MUL COSD 3 ADD MUL = t.txt
-split -l 12 t.txt piece
+split -l 11 t.txt piece
 psxy t.txt -R-5/5/-5/5 -JX3i -P -W1p -Gorange -B2g1WSne -Y5i -K > $ps
 psxy piece?? -R -J -O -W1p -B2g1WSne -X3.5i -K >> $ps
-gmtstitch piece?? -T0.5 | psxy -R -J -O -W1p -Gorange -B2g1WSne -X-3.5i -Y-3.5i -K >> $ps
+gmtstitch piece?? -T0.6 | psxy -R -J -O -W1p -Gorange -B2g1WSne -X-3.5i -Y-3.5i -K >> $ps
 gmtstitch piece?? -T60k -fg | psxy -R -JM3i -O -W1p -Gred -B2g1WSne -X3.5i -K >> $ps
 psxy -R -J -O -T >> $ps
 rm -f t.txt piece??
