@@ -1,6 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1141 2011-07-15 20:55:47 guru Exp $
+	$Id: ChangeLog,v 1.1142 2011-07-19 01:50:04 guru Exp $
 -----------------------------------------------------------------------------------------
+
+2011-07-18	pwessel
+	* gmtstitch_func.c:	Warn that segment with a single point will not connect both
+				ends properly - you will need to rerun the task on the new
+				sets of segments.  We now give a warning.
 
 2011-07-15	pwessel
 	* gmt2kml_func.c:	The -C option now also applies to lines or polygons; use
